Fix for DragEnd event being sent with the wrong coordinates.

This event was accidentally sent with (x, x) instead of (x, y). This
patch corrects this.

BUG=667963

Review-Url: https://codereview.chromium.org/2530663002
Cr-Commit-Position: refs/heads/master@{#434295}

Former-commit-id: 94c098de407049a62aebef939cb7ce93200a5139